plugins {
    id 'java'
    id 'idea'
    id 'org.jetbrains.kotlin.jvm' version '1.9.0-RC'
    id 'org.springframework.boot' version '3.1.1'
}

group 'com.mohistmc.miraimbot'
version project.version
archivesBaseName project.name.toLowerCase()

java.toolchain.languageVersion = JavaLanguageVersion.of(20)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ["--enable-preview", "-Xlint:-removal"]
    options.encoding = 'UTF-8'
}


repositories {
    mavenLocal()
    maven { url 'https://maven.mohistmc.com/' }
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://jitpack.io/' }
    maven { url 'https://repo.opencollab.dev/maven-releases/' }
    maven { url 'https://repo.mirai.mamoe.net/snapshots' }
    maven { url 'https://repo.maven.apache.org/maven2' }
}


dependencies {
    implementation('org.springframework.boot:spring-boot-starter-web:3.1.1') {
        exclude module: 'spring-boot-starter-logging'
    }
    implementation('org.springframework.boot:spring-boot-starter-thymeleaf:3.1.1') {
        exclude module: 'spring-boot-starter-logging'
    }
    implementation 'org.springframework.boot:spring-boot-starter-log4j2:3.1.1'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:3.1.1'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'

    // Mirai 用于QQ机器人
    implementation('net.mamoe:mirai-core-jvm:2.15.0-dev-105') {
        exclude group: 'net.mamoe', module: 'mirai-core-api'
        exclude group: 'net.mamoe', module: 'mirai-core-utils'
    }
    implementation('net.mamoe:mirai-core-api-jvm:2.15.0-dev-105') {
        exclude group: 'net.mamoe', module: 'mirai-core-utils'
    }
    implementation 'net.mamoe:mirai-core-utils-jvm:2.15.0-dev-105'
    implementation 'net.mamoe:mirai-console-compiler-annotations:2.15.0-dev-105'

    // Discord 机器人
    implementation 'org.javacord:javacord:3.8.0'

    implementation 'com.alibaba.fastjson2:fastjson2:2.0.34'
    implementation 'commons-fileupload:commons-fileupload:1.5'
    implementation 'commons-io:commons-io:2.13.0'
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'cn.hutool:hutool-all:5.8.19'
    implementation 'net.minecrell:terminalconsoleappender:1.4.0'
    implementation 'org.jline:jline-terminal-jansi:3.23.0'
    implementation 'org.jline:jline-terminal-jna:3.23.0'
    implementation 'org.jline:jline-reader:3.23.0'

    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'com.mohistmc.yaml:yaml:0.4'
    implementation 'org.yaml:snakeyaml:2.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
    implementation 'com.google.zxing:core:3.5.0'
    implementation('us.codecraft:webmagic-core:0.8.0') {
        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
    }
    implementation('us.codecraft:webmagic-extension:0.7.5') {
        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
    }
    implementation 'com.mysql:mysql-connector-j:8.0.33'
    implementation 'com.theokanning.openai-gpt3-java:service:0.11.1'
    implementation "com.github.oshi:oshi-core:6.4.4"

    implementation 'com.alphacephei:vosk:0.3.45'
    implementation 'org.springframework:spring-jcl:6.0.10'


}